--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <u1>
                     <li class="actual"><a href="index.html">Inicio</a></li>
                     <li><a href="paginas/Historia.html">Historia</a></li>
-                    <li><a href="paginas/personaje.html">Personajes</a></li>
+                    <li><a href="paginas/Personaje.html">Personajes</a></li>
                     <li><a href="paginas/Multimedia.html">Media</a></li>
                 </u1>
             </nav>
