--- a/paginas/Historia.html
+++ b/paginas/Historia.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="diseño web proyecto, Zelda, Proyecto basico Zelda, fans zelda">
     <meta name="author" content="Jonathan Paladines / Roder Granados">
     
-    <link rel="stylesheet" type="text/css" href="../css/estilos2.css">
+    <link rel="stylesheet" type="text/css" href="../CSS/estilos2.css">
 </head>
 <body>
     <header>
