--- a/paginas/Personaje.html
+++ b/paginas/Personaje.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="diseño web proyecto, Zelda, Proyecto basico Zelda, fans zelda">
     <meta name="author" content="Jonathan Paladines / Roder Granados">
     
-    <link rel="stylesheet" type="text/css" href="../css/estilos3.css">
+    <link rel="stylesheet" type="text/css" href="../CSS/estilos3.css">
     <script
   src="https://code.jquery.com/jquery-1.12.4.min.js"
   integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
