--- a/paginas/Historia.html
+++ b/paginas/Historia.html
@@ -20,7 +20,7 @@
                 <u1>
                     <li><a href="../index.html">Inicio</a></li>
                     <li class="actual"><a href="Historia.html">Historia</a></li>
-                    <li><a href="personaje.html">Personajes</a></li>
+                    <li><a href="Personaje.html">Personajes</a></li>
                     <li><a href="Multimedia.html">Media</a></li>
                 </u1>
             </nav>
