--- a/paginas/Multimedia.html
+++ b/paginas/Multimedia.html
@@ -26,7 +26,7 @@
                 <u1>
                     <li><a href="../index.html">Inicio</a></li>
                     <li><a href="Historia.html">Historia</a></li>
-                    <li><a href="personaje.html">Personajes</a></li>
+                    <li><a href="Personaje.html">Personajes</a></li>
                     <li class="actual"><a href="Multimedia.html">Media</a></li>
                 </u1>
             </nav>
