--- a/paginas/Personaje.html
+++ b/paginas/Personaje.html
@@ -27,7 +27,7 @@
                 <u1>
                     <li><a href="../index.html">Inicio</a></li>
                     <li><a href="Historia.html">Historia</a></li>
-                    <li class="actual"><a href="personaje.html">Personajes</a></li>
+                    <li class="actual"><a href="Personaje.html">Personajes</a></li>
                     <li><a href="Multimedia.html">Media</a></li>
                 </u1>
             </nav>
