--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="diseño web proyecto, Zelda, Proyecto basico Zelda, fans zelda">
     <meta name="author" content="Jonathan Paladines / Roder Granados">
     
-    <link rel="stylesheet" type="text/css" href="css/estilos.css">
+    <link rel="stylesheet" type="text/css" href="CSS/estilos.css">
     
 <link href="CSS/estilos.css" rel="stylesheet" type="text/css">
 </head>    
